--- a/index.html
+++ b/index.html
@@ -142,6 +142,54 @@
             </div>
         </header>
         <!-- header end -->
+                 <!-- slide bar start -->
+		 <aside class="slide-bar slide-bar-blockchain">
+            <div class="close-mobile-menu">
+                <a class="tx-close" href="javascript:void(0);"></a>
+            </div>
+
+            <!-- side-mobile-menu start -->
+            <nav class="side-mobile-menu">
+                <a class="header__logo mb-30" href="#!">
+                    <img src="assets/img/logo/logo-2.svg" alt="">
+                </a>
+                <div class="header-mobile-search">
+                    <form role="search" method="get" action="#"> 
+                        <input type="text" placeholder="Search Keywords"> 
+                        <button type="submit"><i class="ti-search"></i></button>
+                    </form>
+                </div>
+                <ul id="mobile-menu-active">
+                    <li class="dropdown"><a href="index.html"><span>Home</span></a>
+                        <ul class="sub-menu">
+                            <li class="active"><a href="index.html"><span>Home Blockchain</span></a></li>
+                            <li><a href="home-2.html"><span>Home Mining</span></a></li>
+                            <li><a href="home-3.html"><span>Home ICO</span></a></li>
+                        </ul>
+                    </li>
+                    <li><a class="scrollspy-btn" href="#feature"><span>Feature</span></a></li>
+                    <li><a class="scrollspy-btn" href="#team"><span>Team</span></a></li>
+                    <li><a class="scrollspy-btn" href="#roadmap"><span>Roadmap</span></a></li>
+                    <li class="dropdown">
+                        <a href="#!"><span>Blog</span></a>
+                        <ul class="sub-menu">
+                            <li><a href="blog.html"><span>Blog</span></a></li>
+                            <li><a href="blog-single.html"><span>Blog Details</span></a></li>
+                        </ul>
+                    </li>
+                    <li><a href="contact.html"><span>Contact</span></a></li>
+                </ul>
+                
+            </nav>
+            <!-- side-mobile-menu end -->
+        </aside>
+
+        <!-- header search end -->
+        <div class="body-overlay"></div>
+        <!-- slide bar end -->
+
+       <main>
+
 
 </body>
 </html>
