--- a/index.html
+++ b/index.html
@@ -19,7 +19,129 @@
     <link rel="stylesheet" href="assets/css/magnific-popup.css">
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
-<body>
+<body class="home-blockchain">
+    <div id="xb-loadding" class="xb-loader style-2">
+        <div class="honeycomb">
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </div>
+
+    <div class="progress-wrap style-2">
+        <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+            <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98"/>
+        </svg>
+    </div>
     
+
+    <div class="body_wrap">
+        <!-- header start -->
+        <header class="site-header header--transparent blockchain-header">
+            <div class="header__main-wrap stricky">
+                <div class="container-fluid">
+                    <div class="header__main ul_li_between">
+                        <div class="header__left ul_li">
+                            <div class="header__logo">
+                                <a href="index.html"><img src="assets/img/logo/logo-2.svg" alt=""></a>
+                            </div>
+                        </div>
+                        <div class="main-menu__wrap ul_li navbar navbar-expand-lg">
+                            <nav class="main-menu collapse navbar-collapse">
+                                <ul>
+                                    <li class="menu-item-has-children has-mega-menu"><a href="index.html">Home</a>
+                                        <ul class="submenu mega-menu">
+                                            <li>
+                                                <div class="mega-menu-content mxw_1505">
+                                                    <div class="row">
+                                                        <div class="col col-md-3">
+                                                            <div class="demo-pic">
+                                                                <a href="index.html">
+                                                                    <img src="assets/img/demo/demo-1.jpg" alt="">
+                                                                </a>
+                                                            </div>
+                                                            <h3>Blockchain</h3>
+                                                        </div>
+                                                        <div class="col col-md-3">
+                                                            <div class="demo-pic">
+                                                                <a href="home-2.html">
+                                                                    <img src="assets/img/demo/demo-2.jpg" alt="">
+                                                                </a>
+                                                            </div>
+                                                            <h3>Bitcoin Mining</h3>
+                                                        </div>
+                                                        <div class="col col-md-3">
+                                                            <div class="demo-pic">
+                                                                <a href="home-3.html">
+                                                                    <img src="assets/img/demo/demo-3.jpg" alt="">
+                                                                </a>
+                                                            </div>
+                                                            <h3>ICO</h3>
+                                                        </div>
+                                                        <div class="col col-md-3">
+                                                            <div class="demo-pic coming-soon">
+                                                                <img src="assets/img/demo/coming-soon.jpg" alt="">
+                                                            </div>
+                                                            <h3>Coming Soon</h3>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                        </ul>
+                                    </li>
+                                    <li><a class="scrollspy-btn" href="#feature">Feature</a></li>
+                                    <li><a class="scrollspy-btn" href="#team">Team</a></li>
+                                    <li><a class="scrollspy-btn" href="#roadmap">Roadmap</a></li>
+                                    <li class="menu-item-has-children">
+                                        <a href="#!">Blog</a>
+                                        <ul class="submenu">
+                                            <li><a href="blog.html">Blog</a></li>
+                                            <li><a href="blog-single.html">Blog Details</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="contact.html">Contact</a></li>
+                                </ul>
+                            </nav>
+                        </div>
+                        <div class="header__action ul_li">
+                            <div class="d-lg-none">
+                                <a class="header__bar hamburger_menu" href="javascript:void(0);">
+                                    <div class="header__bar-icon">
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                        <span></span>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="header__language blockchain-header__language">
+                                <div class="dropdown">
+                                    <button class="dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        <span class="globe">
+                                            <i class="far fa-globe"></i>
+                                        </span>
+                                        EN <i class="down-arrow fas fa-chevron-down"></i>
+                                    </button>
+                                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                        <a class="dropdown-item" href="index.html"><img src="assets/img/icon/chn_flag.png" alt="">CH</a>
+                                        <a class="dropdown-item" href="index.html"><img src="assets/img/icon/rsa_flag.png" alt="">RU</a>
+                                        <a class="dropdown-item" href="index.html"><img src="assets/img/icon/in_flag.png" alt="">IN</a>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="blockchain-header__account">
+                                <a class="blc-btn" href="#!"><span><i class="fas fa-user"></i>LOGIN</span></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </header>
+        <!-- header end -->
+
 </body>
 </html>
