advantages - solution - token

--- a/index.html
+++ b/index.html
@@ -349,6 +349,163 @@
                         </div>
                     </section>
                     <!-- about end -->
+                                 <!-- advantages start -->
+            <section id="feature" class="advantages advantages-bg pb-120" data-background="assets/img/bg/advantages_bg.png">
+                <div class="container">
+                    <div class="sec-title style2 text-center mb-60">
+                        <h2 class="sec-title__title text-50 mb-25">Comparison With Competitors and <br> Our Advantages</h2>
+                        <p>Analyzing competitors showcases our standout advantages</p>
+                    </div>
+                    <table class="advantages-table table-responsive">
+                        <thead>
+                            <tr>
+                                <th>Futures</th>
+                                <th>IDV System</th>
+                                <th>Creating Apps</th>
+                                <th>Confidentiality</th>
+                                <th>Without Gadget</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>coindox</td>
+                                <td><img src="assets/img/icon/badge_active.svg" alt=""></td>
+                                <td><img src="assets/img/icon/badge_deactive.svg" alt=""></td>
+                                <td><img src="assets/img/icon/badge_active.svg" alt=""></td>
+                                <td><img src="assets/img/icon/badge_deactive.svg" alt=""></td>
+                            </tr>
+                            <tr>
+                                <td>Civic</td>
+                                <td><img src="assets/img/icon/badge_active.svg" alt=""></td>
+                                <td><img src="assets/img/icon/badge_deactive.svg" alt=""></td>
+                                <td><img src="assets/img/icon/badge_active.svg" alt=""></td>
+                                <td><img src="assets/img/icon/badge_deactive.svg" alt=""></td>
+                            </tr>
+                            <tr>
+                                <td>Vilid.global</td>
+                                <td><img src="assets/img/icon/badge_active.svg" alt=""></td>
+                                <td><img src="assets/img/icon/badge_deactive.svg" alt=""></td>
+                                <td><img src="assets/img/icon/badge_active.svg" alt=""></td>
+                                <td><img src="assets/img/icon/badge_deactive.svg" alt=""></td>
+                            </tr>
+                            <tr>
+                                <td>Hypr</td>
+                                <td><img src="assets/img/icon/badge_active.svg" alt=""></td>
+                                <td><img src="assets/img/icon/badge_active.svg" alt=""></td>
+                                <td><img src="assets/img/icon/badge_deactive.svg" alt=""></td>
+                                <td><img src="assets/img/icon/badge_active.svg" alt=""></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+            <!-- advantages end -->
+
+            <!-- solution start -->
+            <section class="solution pt-10 pb-70">
+                <div class="container">
+                    <div class="row align-items-center">
+                        <div class="col-lg-6">
+                            <div class="solution__content wow fadeInLeft">
+                                <div class="sec-title style2 mb-60">
+                                    <h2 class="sec-title__title text-50 mb-25">Our Best Blockchain <br> Solution Platform</h2>
+                                    <p>A blockchain solution platform is a comprehensive software or <br> infrastructure that enables businesses and developers to build,</p>
+                                </div>
+                                <ul class="solution__list list-unstyled">
+                                    <li>
+                                        <div class="icon">
+                                            <img src="assets/img/icon/s_01.svg" alt="">
+                                        </div>
+                                        <h4>Blockchain Protocol Support</h4>
+                                        <p>Our supports different blockchain protocols, such as Ethereum</p>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <img src="assets/img/icon/s_02.svg" alt="">
+                                        </div>
+                                        <h4>Analytics and Monitoring</h4>
+                                        <p>Comprehensive analytics and monitoring tools are included</p>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <img src="assets/img/icon/s_03.svg" alt="">
+                                        </div>
+                                        <h4>Security Measures</h4>
+                                        <p>Robust security features and cryptographic protocols</p>
+                                    </li>
+                                    <li>
+                                        <div class="icon">
+                                            <img src="assets/img/icon/s_04.svg" alt="">
+                                        </div>
+                                        <h4>Governance Mechanisms</h4>
+                                        <p>Some platforms provide built-in governance features</p>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-lg-6">
+                            <div class="solution__img pos-rel wow fadeInRight" data-wow-delay="100ms">
+                                <img src="assets/img/shape/s_circle_1.png" alt="">
+                                <div class="solution__img-sml">
+                                    <div class="circle circle--1">
+                                        <div data-parallax='{"x" : -60}'>
+                                            <img src="assets/img/shape/s_circle_2.png" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="circle circle--2">
+                                        <div data-parallax='{"x" : 60}'>
+                                            <img src="assets/img/shape/s_circle_3.png" alt="">
+                                        </div>
+                                    </div>
+                                    <div class="circle circle--3">
+                                        <div data-parallax='{"y" : -60}'>
+                                            <img src="assets/img/shape/s_circle_4.png" alt="">
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="solution__icon">
+                                    <img src="assets/img/icon/s_icon.png" alt="">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- solution end -->
+
+            <!-- token update start -->
+            <section class="token-update pb-130">
+                <div class="container">
+                    <div class="sec-title style2 text-center mb-60">
+                        <h2 class="sec-title__title text-50 mb-25">Live Token Market Updates</h2>
+                        <p>Stay Informed with Live Data and Analysis</p>
+                    </div>
+                    <div class="row mt-none-30">
+                        <div class="col-lg-6 mt-30">
+                            <h3 class="token-update__title">Information About Tokens</h3>
+                            <ul class="token-update__data list-unstyled">
+                                <li><span>Token Name</span><strong>coindox(ITU)</strong></li>
+                                <li><span>Nominal Price</span><strong>1 ITU =0,025 USD</strong></li>
+                                <li><span>Number of Tokens Produced </span><strong>7 BN ITU</strong></li>
+                                <li><span>Unsold Tokens </span><strong>Burn Smart Contract</strong></li>
+                                <li><span>Type of the Token </span><strong>ERC - 20</strong></li>
+                            </ul>
+                        </div>
+                        <div class="col-lg-6 mt-30">
+                            <h3 class="token-update__title">Terms & Conditions</h3>
+                            <ul class="token-update__data list-unstyled">
+                                <li><span>Minimum Payment</span><strong>100 USD</strong></li>
+                                <li><span>Maximum Payment in the first 7 days</span><strong>100 000 USD</strong></li>
+                                <li><span>Maximum Payment in the first 7 days</span><strong>No Limits</strong></li>
+                                <li><span>Soft Cap</span><strong>15 MLN USD</strong></li>
+                                <li><span>Hard Cap </span><strong>75 MLN USD</strong></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- token update end -->
+
         
 
 
