token finish & global css order list :)

--- a/index.html
+++ b/index.html
@@ -505,6 +505,188 @@
                 </div>
             </section>
             <!-- token update end -->
+                         <!-- token chart start -->
+            <section class="token-chat pb-120">
+                <div class="container">
+                    <div class="sec-title style2 text-center mb-50">
+                        <h2 class="sec-title__title text-50 mb-25">30% Bonus Active Now</h2>
+                        <p>The earlier you invest in CRR, higher bonuses you get</p>
+                    </div>
+                    <ul class="token-chat__wrap ul_li_between">
+                        <li>
+                            <div class="token-chat__animation"></div>
+                            <span class="number">30%</span>
+                            <span class="date">Sep 17-oct 9</span>
+                        </li>
+                        <li>
+                            <span class="number">25%</span>
+                            <span class="date">Oct 17 - Nov4</span>
+                        </li>
+                        <li>
+                            <span class="number">20%</span>
+                            <span class="date">Nov 5 - Dec4</span>
+                        </li>
+                        <li>
+                            <span class="number">15%</span>
+                            <span class="date">Dec 26-Jan28</span>
+                        </li>
+                        <li>
+                            <span class="number">10%</span>
+                            <span class="date">Jan 17-Feb18</span>
+                        </li>
+                        <li>
+                            <span class="number">5%</span>
+                            <span class="date">Feb 16-Mar10</span>
+                        </li>
+                        <li>
+                            <span class="number">0%</span>
+                            <span class="date">Mar 11-Apr27</span>
+                        </li>
+                    </ul>
+                </div>
+            </section>
+            <!-- token chart end -->
+
+            <!-- team start -->
+            <section id="team" class="team team__bg pb-120" data-background="assets/img/bg/team_sec_bg.png">
+                <div class="container">
+                    <div class="sec-title style2 text-center mb-60">
+                        <h2 class="sec-title__title text-50 mb-25">Our Dedicated Team</h2>
+                        <p>Always ready our team  to help you</p>
+                    </div>
+                    <div class="row mt-none-30">
+                        <div class="col-xl-3 col-lg-6 col-md-6 mt-30">
+                            <div class="team__single text-center pos-rel">
+                                <div class="avatar">
+                                    <img src="assets/img/team/team_01.png" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Yevhen Oleksiy</h3>
+                                    <span>Blockchain Architect</span>
+                                </div>
+                                <div class="team__social style2 ul_li_center mt-30">
+                                    <ul class="team__social-link link-left ul_li">
+                                        <li><a href="#!"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
+                                    </ul>
+                                    <span class="h-icon"><i class="far fa-plus"></i></span>
+                                    <ul class="team__social-link link-right ul_li">
+                                        <li><a href="#!"><i class="fab fa-linkedin-in"></i></a></li>
+                                        <li><a href="#!"><i class="fab fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                                <div class="rating">
+                                    <img src="assets/img/icon/star.svg" alt="">5.0
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-lg-6 col-md-6 mt-30">
+                            <div class="team__single style2 text-center">
+                                <div class="avatar">
+                                    <img src="assets/img/team/team_02.png" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Pavlo Fedor</h3>
+                                    <span>Founder & CEO</span>
+                                </div>
+                                <div class="team__social style2 ul_li_center mt-30">
+                                    <ul class="team__social-link link-left ul_li">
+                                        <li><a href="#!"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
+                                    </ul>
+                                    <span class="h-icon"><i class="far fa-plus"></i></span>
+                                    <ul class="team__social-link link-right ul_li">
+                                        <li><a href="#!"><i class="fab fa-linkedin-in"></i></a></li>
+                                        <li><a href="#!"><i class="fab fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                                <div class="rating">
+                                    <img src="assets/img/icon/star.svg" alt="">5.0
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-lg-6 col-md-6 mt-30">
+                            <div class="team__single text-center">
+                                <div class="avatar">
+                                    <img src="assets/img/team/team_03.png" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Serhii Anatolii</h3>
+                                    <span>Marketing Manger</span>
+                                </div>
+                                <div class="team__social style2 ul_li_center mt-30">
+                                    <ul class="team__social-link link-left ul_li">
+                                        <li><a href="#!"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
+                                    </ul>
+                                    <span class="h-icon"><i class="far fa-plus"></i></span>
+                                    <ul class="team__social-link link-right ul_li">
+                                        <li><a href="#!"><i class="fab fa-linkedin-in"></i></a></li>
+                                        <li><a href="#!"><i class="fab fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                                <div class="rating">
+                                    <img src="assets/img/icon/star.svg" alt="">5.0
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-3 col-lg-6 col-md-6 mt-30">
+                            <div class="team__single style2 text-center">
+                                <div class="avatar">
+                                    <img src="assets/img/team/team_04.png" alt="">
+                                </div>
+                                <div class="content">
+                                    <h3>Ivan Petrov</h3>
+                                    <span>Blockchain Engineer</span>
+                                </div>
+                                <div class="team__social style2 ul_li_center mt-30">
+                                    <ul class="team__social-link link-left ul_li">
+                                        <li><a href="#!"><i class="fab fa-twitter"></i></a></li>
+                                        <li><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
+                                    </ul>
+                                    <span class="h-icon"><i class="far fa-plus"></i></span>
+                                    <ul class="team__social-link link-right ul_li">
+                                        <li><a href="#!"><i class="fab fa-linkedin-in"></i></a></li>
+                                        <li><a href="#!"><i class="fab fa-instagram"></i></a></li>
+                                    </ul>
+                                </div>
+                                <div class="rating">
+                                    <img src="assets/img/icon/star.svg" alt="">5.0
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- team end -->
+
+            <!-- token distribution start -->
+            <section class="token-distribution pb-120">
+                <div class="container">
+                    <div class="row align-items-center mt-none-30">
+                        <div class="col-xl-5 col-lg-6 mt-30">
+                            <div class="token-distribution__content pos-rel wow fadeInLeft">
+                                <div class="token-distribution__bg"></div>
+                                <div class="icon mb-45">
+                                    <img src="assets/img/icon/bitcoin_icon.png" alt="">
+                                </div>
+                                <div class="sec-title style2 mb-45">
+                                    <h2 class="sec-title__title text-50 mb-25">Token Distribution</h2>
+                                    <p class="text-20 text-white mb-55">Token distribution refers to the process of allocating and distributing tokens within a blockchain ecosystem.</p>
+                                    <p>When a new blockchain project is launched, a specific number of tokens are created, and these tokens are distributed among various stakeholders, including founders.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xl-7 col-lg-6 mt-30">
+                            <div class="token-distribution__img text-lg-end wow fadeInRight" data-wow-delay="100ms">
+                                <img src="assets/img/token/token-distribution.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- token distribution end -->
+
 
         
 
