roadmap FAQ & margin padding class in css :|

--- a/index.html
+++ b/index.html
@@ -686,6 +686,179 @@
                 </div>
             </section>
             <!-- token distribution end -->
+                         <!-- roadmap start -->
+            <section id="roadmap" class="roadmap pb-135">
+                <div class="container">
+                    <div class="sec-title style2 text-center mb-60">
+                        <h2 class="sec-title__title text-50 mb-25">Roadmap</h2>
+                        <p>blockchain a Solid Infrastructure for Growth</p>
+                    </div>
+                    <div class="roadmap__list pos-rel">
+                        <div class="roadmap__list-box">
+                            <div class="roadmap__list-inner">
+                                <div class="icon">
+                                    <img src="assets/img/icon/rm_icon.png" alt="">
+                                </div>
+                                <h3>Stage 1 <br> Q1 - 2023</h3>
+                                <ul class="list-unstyled">
+                                    <li>Ideation</li>
+                                    <li>Proof of Concept</li>
+                                    <li>Business Deck</li>
+                                    <li>Security Audit</li>
+                                    <li>Token on BEP 20</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="roadmap__list-box">
+                            <div class="roadmap__list-inner">
+                                <div class="icon">
+                                    <img src="assets/img/icon/rm_icon.png" alt="">
+                                </div>
+                                <h3>Stage 2 <br> Q2 - 2023</h3>
+                                <ul class="list-unstyled">
+                                    <li>Mainnet Launch</li>
+                                    <li>Smart Contract Upgrade</li>
+                                    <li>Cross-Chain Interoperability</li>
+                                    <li>Governance Model Implementation</li>
+                                    <li>Whitepaper Release</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="roadmap__list-box">
+                            <div class="roadmap__list-inner">
+                                <div class="icon">
+                                    <img src="assets/img/icon/rm_icon.png" alt="">
+                                </div>
+                                <h3>Stage 3 <br> Q3 - 2023</h3>
+                                <ul class="list-unstyled">
+                                    <li>Decentralized Finance Expansion</li>
+                                    <li>Proof of Concept</li>
+                                    <li>Privacy Enhancements</li>
+                                    <li>Developer Grants Program</li>
+                                    <li>BCL Mobile App</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="roadmap__list-box">
+                            <div class="roadmap__list-inner">
+                                <div class="icon">
+                                    <img src="assets/img/icon/rm_icon.png" alt="">
+                                </div>
+                                <h3>Stage 4 <br> Q4 - 2023</h3>
+                                <ul class="list-unstyled">
+                                    <li>Builder NFT Airdrop</li>
+                                    <li>Website Launch</li>
+                                    <li>Legal Opinion</li>
+                                    <li>NFT Marketplace Launch</li>
+                                    <li>Whitepaper Release</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="roadmap__list-box">
+                            <div class="roadmap__list-inner">
+                                <div class="icon">
+                                    <img src="assets/img/icon/rm_icon.png" alt="">
+                                </div>
+                                <h3>Stage 5 <br> Q5 - 2024</h3>
+                                <ul class="list-unstyled">
+                                    <li>Scalability Improvements</li>
+                                    <li>Real-World Integration</li>
+                                    <li>User-Friendly Wallet</li>
+                                    <li>Sustainable Blockchain</li>
+                                    <li>Global Community Expansion</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="roadmap__list-box">
+                            <div class="roadmap__list-inner">
+                                <div class="icon">
+                                    <img src="assets/img/icon/rm_icon.png" alt="">
+                                </div>
+                                <h3>Stage 6 <br> Q6 - 2024</h3>
+                                <ul class="list-unstyled">
+                                    <li>Citizenship and land parcel</li>
+                                    <li>Meta Event Arena Launch</li>
+                                    <li>First Planet Phase 1 Launch</li>
+                                    <li>NFT Artist Onboarding Release</li>
+                                    <li>Initial Metaverse Offering Launce</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!-- roadmap end -->
+
+            <!-- faq start -->
+            <section class="faq pb-75">
+                <div class="container">
+                    <div class="sec-title style2 text-center mb-40">
+                        <h2 class="sec-title__title text-50 mb-25">Frequently Asked Questions</h2>
+                        <p>Have questions? We have answers!</p>
+                    </div>
+                    <div class="faq__blockchain">
+                        <ul class="accordion_box clearfix">
+                            <li class="accordion block active-block">
+                                <div class="acc-btn">
+                                    What is Blockchain?
+                                    <span class="arrow"><span></span></span>
+                                </div>
+                                <div class="acc_body current">
+                                    <div class="content">
+                                        Blockchain uses consensus mechanisms, such as Proof of Work (PoW) or Proof of Stake (PoS), to validate and agree on the state of the <br> network. These mechanisms require participants (nodes or validators) to solve complex mathematical puzzles or stake cryptocurrency to <br> participate in the consensus process. 
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="accordion block">
+                                <div class="acc-btn">
+                                    How is Blockchain Secure?
+                                    <span class="arrow"><span></span></span>
+                                </div>
+                                <div class="acc_body">
+                                    <div class="content">
+                                        Blockchain uses consensus mechanisms, such as Proof of Work (PoW) or Proof of Stake (PoS), to validate and agree on the state of the <br> network. These mechanisms require participants (nodes or validators) to solve complex mathematical puzzles or stake cryptocurrency to <br> participate in the consensus process. 
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="accordion block">
+                                <div class="acc-btn">
+                                    What is the Difference Between Public and Private Blockchains?
+                                    <span class="arrow"><span></span></span>
+                                </div>
+                                <div class="acc_body">
+                                    <div class="content">
+                                        Blockchain uses consensus mechanisms, such as Proof of Work (PoW) or Proof of Stake (PoS), to validate and agree on the state of the <br> network. These mechanisms require participants (nodes or validators) to solve complex mathematical puzzles or stake cryptocurrency to <br> participate in the consensus process. 
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="accordion block">
+                                <div class="acc-btn">
+                                    How Can I Get Started with Blockchain?
+                                    <span class="arrow"><span></span></span>
+                                </div>
+                                <div class="acc_body">
+                                    <div class="content">
+                                        Blockchain uses consensus mechanisms, such as Proof of Work (PoW) or Proof of Stake (PoS), to validate and agree on the state of the <br> network. These mechanisms require participants (nodes or validators) to solve complex mathematical puzzles or stake cryptocurrency to <br> participate in the consensus process. 
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="accordion block">
+                                <div class="acc-btn">
+                                    What Are Some Real-World Use Cases of Blockchain?
+                                    <span class="arrow"><span></span></span>
+                                </div>
+                                <div class="acc_body">
+                                    <div class="content">
+                                        Blockchain uses consensus mechanisms, such as Proof of Work (PoW) or Proof of Stake (PoS), to validate and agree on the state of the <br> network. These mechanisms require participants (nodes or validators) to solve complex mathematical puzzles or stake cryptocurrency to <br> participate in the consensus process. 
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <!-- faq end -->
+
 
 
         
