--- a/index.html
+++ b/index.html
@@ -859,6 +859,60 @@
             </section>
             <!-- faq end -->
 
+                        <!-- brand start -->
+                        <section class="brand brand__sec-bg pb-90 pos-rel" data-background="assets/img/bg/brand_bg.png">
+                            <div class="container">
+                                <div class="brand__wrap pos-rel">
+                                    <div class="brand__bg"></div>
+                                    <div class="sec-title style2 text-center mb-50">
+                                        <h2 class="sec-title__title text-50 mb-25">Our Partners</h2>
+                                        <p>Discover Our Trusted Blockchain Partners</p>
+                                    </div>
+                                    <div class="brand__item-wrap">
+                                        <div class="brand__single">
+                                            <a href="#!"><img src="assets/img/brand/brand_01.png" alt=""></a>
+                                        </div>
+                                        <div class="brand__single">
+                                            <a href="#!"><img src="assets/img/brand/brand_02.png" alt=""></a>
+                                        </div>
+                                        <div class="brand__single">
+                                            <a href="#!"><img src="assets/img/brand/brand_03.png" alt=""></a>
+                                        </div>
+                                        <div class="brand__single">
+                                            <a href="#!"><img src="assets/img/brand/brand_04.png" alt=""></a>
+                                        </div>
+                                        <div class="brand__single">
+                                            <a href="#!"><img src="assets/img/brand/brand_05.png" alt=""></a>
+                                        </div>
+                                        <div class="brand__single">
+                                            <a href="#!"><img src="assets/img/brand/brand_06.png" alt=""></a>
+                                        </div>
+                                        <div class="brand__single">
+                                            <a href="#!"><img src="assets/img/brand/brand_07.png" alt=""></a>
+                                        </div>
+                                        <div class="brand__single">
+                                            <a href="#!"><img src="assets/img/brand/brand_08.png" alt=""></a>
+                                        </div>
+                                        <div class="brand__single">
+                                            <a href="#!"><img src="assets/img/brand/brand_09.png" alt=""></a>
+                                        </div>
+                                        <div class="brand__single">
+                                            <a href="#!"><img src="assets/img/brand/brand_10.png" alt=""></a>
+                                        </div>
+                                        <div class="brand__single">
+                                            <a href="#!"><img src="assets/img/brand/brand_11.png" alt=""></a>
+                                        </div>
+                                        <div class="brand__single">
+                                            <a href="#!"><img src="assets/img/brand/brand_12.png" alt=""></a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
+                        <!-- brand end -->
+                   </main>
+            
+
 
 
         
