--- a/index.html
+++ b/index.html
@@ -911,7 +911,97 @@
                         </section>
                         <!-- brand end -->
                    </main>
-            
+                   <!-- footer start -->
+        <footer class="site-footer footer__blockchain pos-rel pt-95 bg_img" data-background="assets/img/bg/footer_bg2.jpg">
+            <div class="container">
+                <div class="footer__newsletter ul_li_between mt-none-30">
+                    <div class="sec-title style2 mt-30">
+                        <h2 class="sec-title__title text-50">Get regular updates</h2>
+                    </div>
+                    <div class="footer__newsletter-form mt-30">
+                        <form action="#!">
+                            <input type="text" placeholder="Enter Your Email Address">
+                            <button class="blc-btn">subscribe</button>
+                        </form>
+                    </div>
+                </div>
+                <div class="row mt-none-30 pb-70">
+                    <div class="col-lg-4 col-md-6 col-sm-6 mt-30">
+                        <div class="footer__widget">
+                            <div class="footer__widget-community text-center">
+                                <h3>Join Our Blockchain <br> Community</h3>
+                                <a href="#!"><img src="assets/img/icon/discord.svg" alt="">join</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 mt-30">
+                        <div class="footer__widget">
+                            <h3>Quick Links</h3>
+                            <ul class="footer__widget-links list-unstyled">
+                                <li><a href="#!">Whitepaper</a></li>
+                                <li><a href="#!">One pager</a></li>
+                                <li><a href="#!">Presentation</a></li>
+                                <li><a href="#!">Contact</a></li>
+                                <li><a href="#!">Token Sale</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-md-6 col-sm-6 mt-30">
+                        <div class="footer__widget">
+                            <h3>Others Links</h3>
+                            <ul class="footer__widget-links list-unstyled">
+                                <li><a href="#!">About</a></li>
+                                <li><a href="#!">API Docs</a></li>
+                                <li><a href="#!">News</a></li>
+                                <li><a href="#!">Team</a></li>
+                                <li><a href="#!">FAQ</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-2 col-md-6 col-sm-6 mt-30">
+                        <div class="footer__widget">
+                            <h3>legal</h3>
+                            <ul class="footer__widget-links list-unstyled">
+                                <li><a href="#!">Privacy Policy</a></li>
+                                <li><a href="#!">Terms & Conditions</a></li>
+                                <li><a href="#!">Disclaimer</a></li>
+                                <li><a href="#!">Sitemap</a></li>
+                                <li><a href="#!">Terms & Use</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer__copyright-blc ul_li_between">
+                    <div class="footer__copyright-text mt-15">
+                        Copyright © 2023 Coindox. All rights reserved.
+                    </div>
+                    <ul class="footer__social ul_li mt-15">
+                        <li><a href="#!"><i class="fab fa-facebook-f"></i></a></li>
+                        <li><a href="#!"><i class="fab fa-linkedin-in"></i></a></li>
+                        <li><a href="#!"><i class="fab fa-instagram"></i></a></li>
+                        <li><a href="#!"><i class="fab fa-telegram-plane"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+        <!-- footer end -->
+
+    </div>
+
+    <!-- jquery include -->
+    <script src="assets/js/jquery-3.5.1.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/wow.min.js"></script>
+    <script src="assets/js/appear.js"></script>
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="assets/js/metisMenu.min.js"></script>
+    <script src="assets/js/jquery.marquee.min.js"></script>
+    <script src="assets/js/parallax-scroll.js"></script>
+    <script src="assets/js/countdown.js"></script>
+    <script src="assets/js/easing.min.js"></script>
+    <script src="assets/js/scrollspy.js"></script>
+    <script src="assets/js/main.js"></script>
+
 
 
 
